<resources>
    <string name="app_name">given</string>
    <string name="action_settings">Settings</string>
    <string name="chatbotnav">Chats</string>
    <string name="abugistbotnav">Gists</string>
    <string name="faceofabubotnav">Face of ABU</string>
    <string name="postsbotnav">Posts</string>
    <string name="utilitiesbotnav">Utilities</string>
    <string name="hint_email">Email...</string>
    <string name="hint_id">Password</string>
    <string name="hint_name">Name</string>
    <string name="sign_in">Already have an account? Sign In</string>
    <string name="sign_up">Register</string>
    <string name="error_message_name">Error</string>
    <string name="error_message_emailnull">Please enter valid email</string>
    <string name="error_message_password">please enter a password</string>
    <string name="bookstuffs">Booko</string>
    <string name="newgroup">New group</string>
    <string name="abuweb">Abu web</string>
    <string name="profile">Profile</string>
    <string name="timetable">Time table</string>
    <string name="search">Search</string>
    <string name="statusstuff">Status</string>
    <string name="onlineStuff">online</string>
    <string name="toolbar_narme">name</string>
    <string name="action_name">name</string>
    <string name="my_status">status</string>
    <string name="action_time">time</string>
    <string name="mymessage">man of God ne sje;fwfbeqkv gf wlkhfbrfrbfh hffr bhlgbrggbgbg   hlkger hgg lrgh bghbg hkbg</string>
    <string name="logout">Log out</string>
    <string name="Add">Add...</string>
    <string name="ideas">please enter your idea here</string>
    <string name="ideesddhint">what you like</string>
    <string name="name">Name</string>
    <string name="namehint">name...</string>
    <string name="send">Post</string>
    <string name="imageme">Image(Optional)</string>
    <string name="names">Name</string>
    <string name="mystatus">status</string>
    <string name="myusername">username</string>
    <string name="name1" />
    <string name="gender">Gender</string>
    <string name="y" />
    <string name="relationship">Relationship status</string>
    <string name="searchby">Search by :</string>
    <string name="please">Please enter your registration number, username, name , department...</string>
    <string name="select">Please select the picture you want to post ....</string>
    <string name="changestatus">Change status</string>
    <string name="changeimage">Change iimage</string>
    <string name="change_status">Change status</string>
    <string name="createaccount">Create new Account</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="stuffs">This application is meant for Abu student only, it aim is to increase the level of relationship between student and also promote your academic performance.</string>
    <string name="abuapp">Abu Application</string>
    <string name="welcom">Welcome to Abu Application !!!</string>
    <string name="department">Department</string>
    <string name="queen">Queen</string>
    <string name="king">King</string>
    <string name="upcoming">Upcoming King</string>
    <string name="upcomingQueen">Upcoming Queen</string>
    <string name="abu">Abu</string>
    <string name="vote">Vote</string>
    <string name="support">Support</string>
    <string name="wifi">Wifi</string>
    <string name="addfriend"> Add a friend</string>
    <string name="me">Me</string>
    <string name="exit">Exit</string>
    <string name="time">time</string>
    <string name="new_groups">Create group</string>
    <string name="about">About</string>
    <string name="pricacy">Privacy</string>
    <string name="deleteaccount">Delete account</string>
    <string name="accountinfo" />
    <string name="accountinfoo">Account Info</string>
    <string name="security">Security</string>
    <string name="accountverifacation">Account verification</string>
    <string name="enterissend">Enter is send</string>
    <string name="enterissendsummary">Enter key will add a new line</string>
    <string name="chatsettings">Chat settings</string>
    <string name="fontsize">Font size</string>
    <string name="fontforchatscreen">Font size for chat screen</string>
    <string name="setwallpaper">Wallpaper</string>
    <string name="selectwallpaper">Choose your wallpaper</string>
    <string name="chatbackup">Save your messages</string>
    <string name="chatbackaptitle">Chat backup</string>
    <string name="chathistory">Chat history</string>
    <string name="conversertiontone">Conversertion tones</string>
    <string name="playsongincomingoutgoing">Play song for incoming and going message</string>
    <string name="messagenotification">Message notification</string>
    <string name="vibratetitle">Vibrate</string>
    <string name="callnotification">Call notifications</string>
    <string name="resetbuttons">Reset Button</string>
    <string name="resetsummary">Click here to reset your notifications settings</string>
    <string name="mediaautodownlod">Media auto download</string>
    <string name="wifiusage">During wifi usage</string>
    <string name="mobileusage">During mobile data usage</string>
    <string name="display_mediain_gallary">Display media in gallery</string>
    <string name="displaymediasummary">Show all downloaded image outside application</string>
    <string name="noteforgroup">Include your details</string>
    <string name="hint_namegroup">name of group</string>
    <string name="memberselcted">Selected members</string>
    <string name="countmember">1 out of 200</string>
    <string name="create_group">Create group</string>
    <string name="addmembers">add member here</string>
    <string name="loading">Loading...</string>
    <string name="addcaptionshere">Add your captions here</string>
    <string name="subaccounttoolbar">do the settings of your account here</string>
    <string name="quantity">Quantity</string>
    <string name="price">price</string>
    <string name="initial_quantity_value">1</string>
    <string name="total">Total</string>
    <string name="shoopings">Shoping</string>
    <string name="picture_for_picture">Please add the picture of your good :</string>
    <string name="namewithdot">Name of product :</string>
    <string name="price_perone">Price per one(#) :</string>
    <string name="minimum_for_hostel">Minimum number of product for hostel delivery :</string>
    <string name="posts">Post product</string>
    <string name="producthere">Product</string>
    <string name="games_play">Games</string>
    <string name="inlove">Brother/sister i think you are in love...?</string>
    <string name="girl">Girl name here</string>
    <string name="calculating">Calculating...</string>
    <string name="boy">Boy name here</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="girl2">Girl</string>
    <string name="perce">50%</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
