<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:contentDescription="@string/abuapp"
        android:src="@mipmap/gghlauncher_background"/>

    <TextView
        android:layout_below="@id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textSize="22dp"
        android:id="@+id/ee"
        android:textColor="@color/colorAccent"

        android:text="@string/welcom"/>
    <TextView
        android:layout_below="@id/ee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:id="@+id/www"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:text="@string/stuffs"/>

    <Button
        android:id="@+id/signbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_above="@id/create_new_accountbtn"
        android:background="@drawable/welcomebackbutton"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/create_new_accountbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createaccount"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"

        android:background="@drawable/welcomebackbutton"
        android:textColor="@color/white"/>
</RelativeLayout>