<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/whiteee"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/eeee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center"
        android:background="@color/transparent2"
        android:gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/transparent2">

            <TextView
                android:id="@+id/dialognamestuff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@color/white"
                android:text="@string/me"
                />
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greenchat"/>
    <ImageView
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:maxWidth="350dp"
        android:layout_height="wrap_content"
        android:minHeight="250dp"
        android:maxHeight="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook_avatar"
        android:id="@+id/displayfriendprof"

        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_below="@id/displayfriendprof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:background="@color/transparent2"
        android:weightSum="3">

        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/profile_action_name"
            android:background="@color/greenchat"
            android:text="@string/profile"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/settings_action_name"
            android:background="@color/greenchat"
            android:text="@string/action_settings"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/profile_action_name"
            android:background="@color/greenchat"
            android:text="@string/about"

            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>