<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"

   >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="150dp"

    android:src="@mipmap/gghlauncher_background"/>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_layout_passsword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"

            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_id"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_background"
            android:text="@string/login" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/create_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rectangle_layout"
            android:text="@string/createaccount" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>
